# quivr-personal-doc-loader

./: .env.example  app.py  docker-compose.yml  document_uploader.py  pyproject.toml
