[tool.poetry]
name = "quivr-doc-loader"
version = "0.1.0"
description = ""
authors = ["Quinten M <quinten@infi.nl>"]
readme = "README.md"
packages = [{include = "quivr_doc_loader"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

